progress bar spacing correct

--- a/app/assets/stylesheets/todo_list.scss
+++ b/app/assets/stylesheets/todo_list.scss
@@ -291,6 +291,7 @@ a.spmenu-button {
   position: relative;
   top: 10px;
   opacity: .1;
+  left: 10px;
 }
 
 .todo-item {
@@ -309,7 +310,7 @@ a.spmenu-button {
 
 .todo-item-margin {
   position: relative;
-  left: 5px;
+  left: 15px;
 }
 .todoclosed {
   right: -320px;
